fixes menu z-index

--- a/element-styles/unewnavigation/unewnavigation_default.css
+++ b/element-styles/unewnavigation/unewnavigation_default.css
@@ -125,6 +125,7 @@ div.responsive_nav_toggler {
     -moz-border-radius: 50%;
     -webkit-border-radius: 50%;
     background: #ufc3;
+    z-index:0;
 }
 div.responsive_nav_toggler > div {
     width: 16px;
@@ -158,8 +159,9 @@ div[data-style='burger'] ul.menu > li.menu-item > a {
 div[data-style='burger'] ul.menu > li.current-menu-item > a, div[data-style='burger'] ul.menu > li.menu-item > a:hover {
     border-bottom-color: #ufc1;
 }
-div.burger_overlay {
+div.upfront-navigation div.burger_overlay {
   background-color:rgba(51, 51, 51, 0.9);
+  z-index: 1;
 }
  i.burger_nav_close:before {
     position: relative;
